add images + bar

--- a/index.html
+++ b/index.html
@@ -23,11 +23,31 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-2"></div>
+        <div class="col-xs-2">
+          <div class="shadow-box">
+            <h3>Koskisen</h3>
+            <h2>Järvelä</h2>
+            <img src="img/factory.png" />
+          </div>
+        </div>
         <div class="col-md-8">
           <canvas id="updating-chart" style="width:100%; height: 400px;"></canvas>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-xs-2">
+          <div class="shadow-box">
+            <h3>Raute</h3>
+            <h2>Nastola</h2>
+            <img src="img/rautenastola.png" />
+          </div>
+          
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="progress">
+            <div class="progress-bar progress-bar-warning" role="progressbar" data-transitiongoal="75"></div>
+          </div>
+        </div>
       </div>
 
     </div><!-- /.container -->
@@ -39,6 +59,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/build/chart.js"></script>
+    <script src="js/build/bootstrap-progressbar.min.js"></script>
     <script src="js/build/bundle.js"></script>
   </body>
 </html>
